[metadata]
name = rnaseqmixture
version = 0.1.0
author = Florian Finkernagel
author_email = finkernagel@imt.uni-marburg.de
description = rnaseq mixture correction
keywords = rnaseq TPM, 
url = http://www.imt.uni-marburg.de
long-description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
	Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = rnaseqmixture
install_requires = pandas
